--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,9 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'me.tatarka:gradle-retrolambda:3.7.0'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
-
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -35,8 +35,9 @@ ext {
     rxAndroid = 'io.reactivex.rxjava2:rxandroid:2.0.1'
     rxBinding = 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
 
-    supportLibraryVersion = '26.+'
+    supportLibraryVersion = '25.3.1'
     appCompat = "com.android.support:appcompat-v7:$supportLibraryVersion"
+    design = "com.android.support:design:$supportLibraryVersion"
     supportAnnotations = "com.android.support:support-annotations:$supportLibraryVersion"
     junit = 'junit:junit:4.12'
     mockito = 'org.mockito:mockito-core:1.10.19'
