--- a/.travis.yml
+++ b/.travis.yml
@@ -20,5 +20,11 @@ before_install:
     - sudo apt-get update -qq
     - sudo apt-get install oracle-java8-installer
 
+script:
+  — ./gradlew build jacocoTestReport
+
+after_success:
+  — bash <(curl -s https://codecov.io/bash)
+
 notifications:
   email: false
