Added automatic bintray upload

--- a/build.gradle
+++ b/build.gradle
@@ -8,12 +8,18 @@ buildscript {
         classpath 'com.android.tools.build:gradle:2.3.3'
         classpath 'me.tatarka:gradle-retrolambda:3.7.0'
         classpath 'com.dicedmelon.gradle:jacoco-android:0.1.1'
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'net.nemerosa:versioning:2.0.0'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7'
+        classpath 'org.jfrog.buildinfo:build-info-extractor-gradle:4.4.5'
     }
 }
 
+group GROUP
+version VERSION_NAME
+
 allprojects {
+    group GROUP
+    version VERSION_NAME
     repositories {
         jcenter()
     }
