--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ before_script:
     - chmod +x .script/deploy_artifacts.sh
 
 script:
-  - ./gradlew clean build --info
+  - ./gradlew clean build
   - ./gradlew build jacocoTestReport
   - ./gradlew connectedCheck
 
