Changed maven publication to mavenCustom

--- a/gradle/jfrog-uploader.gradle
+++ b/gradle/jfrog-uploader.gradle
@@ -124,7 +124,7 @@ bintray {
     user = bintrayUser
     key = bintrayKey
     publish = true
-    configurations = ['archives']
+    publications = ['mavenCustom']
     pkg {
         repo = 'maven'
         name = project.name
