--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,23 @@
 # Project-wide Gradle settings
-org.gradle.jvmargs=-Xmx1536m
 
 GROUP=com.mohamad-amin.rxactivityresults
 VERSION_NAME=0.1
+
+POM_DESCRIPTION=Android onActivityResult wrapper powered by RxJava
+POM_INTERCEPTION_YEAR=2017
+
+POM_URL=https://github.com/mohamad-amin/RxActivityResults/
+POM_SCM_URL=https://github.com/mohamad-amin/RxActivityResults/
+POM_SCM_CONNECTION=scm:git:git://github.com/mohamad-amin/RxActivityResults.git
+POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/mohamad-amin/RxActivityResults.git
+
+POM_LICENCE_NAME=The Apache Software License, Version 2.0
+POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
+POM_LICENCE_DIST=repo
+POM_LICENCE='Apache-2.0'
+
+POM_DEVELOPER_ID=mohamad-amin
+POM_DEVELOPER_NAME=Mohamad Amin
+POM_PROJECT_NAME=RxActivityResults
+
+org.gradle.jvmargs=-Xmx1536M
