--- a/rxactivityresults/gradle.properties
+++ b/rxactivityresults/gradle.properties
@@ -1,1 +1,4 @@
 DESC=Android onActivityResult wrapper powered by RxJava
+POM_ARTIFACT_ID=rxactivityresults
+POM_NAME=RxActivityResults Core
+POM_PACKAGING=aar
